PCAI-120: Java DTO для запроса к Python (AiContextRequest) + сборка профиля-агрегата (#69)
* Доработка, форматирование, удаление лишнего2

* Исправление некорректного поля в контракте

* PCAI-120. Добавление AiContextBuilder

* PCAI-120. Исправление замечаний к пул реквесту

* PCAI-120. Исправлено форматирование

* PCAI-120 Убраны лишние импорты, добавлен TODO к profileSummary, изменено значение по умолчанию для max-results

* PCAI-120 Исправлена ошибка с билдером

---------

Co-authored-by: Edvard <ndreylenkom32@gmail.com>